# cython

./: configure_openmp.py  cython.py  embed.sh  flags.sh  pyproject.toml  requirements.txt  setup.py
Cython/: __init__.py
Cython/Compiler/: CmdLine.py  Main.py  Options.py
Tools/: __init__.py  cystdlib.py  cython-generate-shadow-pyi.py  jedityper.py  make_dataclass_tests.py  test_typing.c  test_typing.py  test_typing.py_typed.py
Tools/site_scons/: .venv
jedi/: __init__.py  __main__.py  _compatibility.py  cache.py  common.py  debug.py  refactoring.py  settings.py  utils.py
jedi/api/: __init__.py  classes.py  helpers.py  interpreter.py  keywords.py  replstartup.py  usages.py
jedi/evaluate/: __init__.py  analysis.py  cache.py  docstrings.py  dynamic.py  finder.py  flow_analysis.py  helpers.py  imports.py  iterable.py  param.py  precedence.py  recursion.py  representation.py  stdlib.py  sys_path.py
jedi/evaluate/compiled/: __init__.py  fake.py
jedi/parser/: __init__.py  fast.py  token.py  tokenize.py  tree.py  user_context.py
jedi/parser/pgen2/: grammar.py  parse.py  (+1 more)
tests/memoryview/: numpy_memoryview.pyx
tests/run/: _cython_inline_6a29faa4366829425493117ba49e0d75b5844e12937cb855cc0da86b65e8ed22.pyx  _cython_inline_978d6d2f25189e739b47679b65822edc13243662214d51bd50cb5b837aac73f0.pyx  _cython_inline_b2d5e92c40d821646de5afe58fcc7f61190d0537ef6eae589926ec2b3d91b36c.pyx  _cython_inline_bdfab0cb233757765b4978275980704e639daf154041a9b85761f49179559335.pyx  _cython_inline_cf0101e615bc8dbfbbf89fb85347047d496a31748e7951dc89ef75e8da762222.pyx  test_dataclasses.pyx
(+7 files in other folders)
